--- a/cat_dua/___/css/bootstrap.css
+++ b/cat_dua/___/css/bootstrap.css
@@ -5733,7 +5733,7 @@ button.list-group-item-danger.active:focus {
 }
 .panel-default > .panel-heading {
   color: #333;
-  background-color: #f5f5f5;
+  background-color: #ffffff;
   border-color: #ddd;
 }
 .panel-default > .panel-heading + .panel-collapse > .panel-body {
